Re: Dashboard review

--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/NewsFeed/Default.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/NewsFeed/Default.cshtml
@@ -39,7 +39,7 @@
                     </a>
                 }
 
-                <div id="pnl-@(i)" class="collapse row g-0 g-sm-3 g-lg-0 p-0 p-sm-3 p-lg-0" attr-class='(isFirst, "show")' data-parent="#news-feed-accordion">
+                <div id="pnl-@(i)" class="newsfeed-channel custom-scrollbar collapse row g-0 g-sm-3 g-lg-0 p-0 p-sm-3 p-lg-0" attr-class='(isFirst, "show")' data-parent="#news-feed-accordion">
                     @foreach (var item in channel.NewsFeedItems)
                     {
                         <div class="col-12 col-sm-6 col-lg-12">
