Dashboard: minor layout fixes

--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/DashboardOrders/Default.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/DashboardOrders/Default.cshtml
@@ -12,7 +12,7 @@
 
 <div class="report chart-colors" id="orders-report">
     <div class="report-title-row flex-wrap">
-        <div class="d-flex flex-nowrap flex-grow-1">
+        <div class="d-flex flex-nowrap flex-grow-1 align-items-baseline">
             <div class="report-title pr-3">@T("Admin.Orders")</div>
             <div class="pl-1 fs-h5 pr-3">
                 <span id="orders-sum-amount" class="text-muted text-nowrap"></span>
