--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/DashboardRegisteredCustomers/Default.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/DashboardRegisteredCustomers/Default.cshtml
@@ -14,7 +14,7 @@
 
 <div class="report chart-colors" id="customers-report">
     <div class="report-title-row flex-wrap">
-        <div class="d-flex flex-nowrap flex-grow-1">
+        <div class="d-flex flex-nowrap flex-grow-1 align-items-baseline">
             <div class="report-title pr-3">@T("Admin.Report.CustomerRegistrations")</div>
 
             <div class="pl-1 fs-h5 pr-3">
