No tooltip for widget zone info

--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -10,8 +10,9 @@ else
 {
     <span class="badge badge-primary badge-subtle badge-ring widget-zone-info text-truncate" title="@zoneName">
         <span class="text-truncate">@zoneName</span>
-        <a href="javascript:;" class="btn-clipboard pretty-link mr-1" data-copy="@zoneName">
+        @* Maybe later *@
+        @*<a href="javascript:;" class="btn-clipboard pretty-link mr-1" data-copy="@zoneName">
             <span><i class="far fa-paste"></i></span>
-        </a>
+        </a>*@
     </span>
 }
