--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/DashboardLatestOrders/Default.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/DashboardLatestOrders/Default.cshtml
@@ -11,24 +11,21 @@
         <table class="table small">
             <thead>
                 <tr>
-                    <th class="display-row" style="width: 30%">@T("Admin.Customers.Reports.BestBy.Fields.Customer")</th>
+                    <th class="display-row" style="width: 15%">@T("Admin.Customers.Reports.BestBy.Fields.OrderNumber")</th>
+                    <th class="display-row" style="width: 15%">@T("Account.CustomerOrders.OrderStatus")</th>
                     <th class="display-row text-center px-3 d-none d-sm-table-cell" style="width: 10%">@T("Admin.Catalog.Categories.Products")</th>
-                    <th class="display-row text-right" style="width: 20%; padding-right: 2rem">@T("Common.Amount")</th>
+                    <th class="display-row text-right" style="width: 15%; padding-right: 2rem">@T("Common.Amount")</th>
                     <th class="display-row d-none d-sm-table-cell" style="width: 20%;">@T("Account.CustomerOrders.OrderDate")</th>
-                    <th class="display-row" style="width: 20%">@T("Account.CustomerOrders.OrderStatus")</th>
+                    <th class="display-row" style="width: 25%">@T("Admin.Customers.Reports.BestBy.Fields.Customer")</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var x in Model.LatestOrders)
                 {
                     <tr class="order-row" index="@x.OrderId">
-                        <td class="display-row" title="@x.CustomerDisplayName">
-                            <a asp-action="Edit" asp-controller="Customer" asp-route-id="@x.CustomerId">@x.CustomerDisplayName</a>
+                        <td class="display-row" title="@x.OrderId">
+                            <a asp-action="Edit" asp-controller="Order" asp-route-id="@x.OrderId">@x.OrderNumber</a>
                         </td>
-                        <td class="display-row text-center d-none d-sm-table-cell" title="@x.ProductsTotal">@x.ProductsTotal</td>
-                        <td class="display-row text-right" style="padding-right: 2rem" title="@x.TotalAmount @T("Tax.InclVAT")">@x.TotalAmount</td>
-                        <td class="display-row d-none d-sm-table-cell" title="@x.Created">@x.Created</td>
-
                         @if (x.OrderState == OrderStatus.Pending)
                         {
                             <td class="display-row d-flex align-items-center" title="@T("Enums.OrderStatus.Pending")">
@@ -57,6 +54,14 @@
                                 <a asp-action="Edit" asp-controller="Order" asp-route-id="@x.OrderId" class="pl-2 text-dark text-truncate">@T("Enums.OrderStatus.Cancelled")</a>
                             </td>
                         }
+
+                        <td class="display-row text-center d-none d-sm-table-cell" title="@x.ProductsTotal">@x.ProductsTotal</td>
+                        <td class="display-row text-right" style="padding-right: 2rem" title="@x.TotalAmount @T("Tax.InclVAT")">@x.TotalAmount</td>
+                        <td class="display-row d-none d-sm-table-cell" title="@x.Created">@x.Created</td>
+
+                        <td class="display-row" title="@x.CustomerDisplayName">
+                            <a asp-action="Edit" asp-controller="Customer" asp-route-id="@x.CustomerId">@x.CustomerDisplayName</a>
+                        </td>
                     </tr>
                 }
             </tbody>
