Custom scrollbar: some fixes due to updated browser behaviour

--- a/src/Smartstore.Web/wwwroot/shared/_custom-scrollbar-buttons.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_custom-scrollbar-buttons.scss
@@ -1,6 +1,6 @@
 /// <reference path="references.scss" />
 
-// Scrollbar nuttons (increment/decrement)
+// Scrollbar buttons (increment/decrement)
 // INFO: obsolete, just here for reference purpose.
 // ----------------------------------------------------------
 
