--- a/src/Smartstore.Web/wwwroot/shared/_custom-scrollbar.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_custom-scrollbar.scss
@@ -6,12 +6,12 @@
 .custom-scrollbar {
     --overflow-x: hidden;
     --overflow-y: auto;
-    --scrollbar-size: 14px;
-    --scrollbar-track-color: transparent;
-    --scrollbar-track-hover-color: rgba(0,0,0, 0.05);
-    --scrollbar-thumb-color: rgba(0,0,0, 0.2);
-    --scrollbar-thumb-hover-color: rgba(0,0,0, 0.3);
-    --scrollbar-thumb-active-color: rgba(0,0,0, 0.4);
+    --scrollbar-size: 18px;
+    --scrollbar-track-color: rgba(0,0,0, 0.025);
+    --scrollbar-track-hover-color: rgba(0,0,0, 0.025);
+    --scrollbar-thumb-color: rgba(0,0,0, 0.3);
+    --scrollbar-thumb-hover-color: rgba(0,0,0, 0.5);
+    --scrollbar-thumb-active-color: rgba(0,0,0, 0.6);
     overflow-x: var(--overflow-x, hidden) !important;
     overflow-y: var(--overflow-y, auto) !important;
 
@@ -24,7 +24,6 @@
 .custom-scrollbar::-webkit-scrollbar {
     width: var(--scrollbar-size);
     height: var(--scrollbar-size);
-    //background-color: transparent;
 }
 
 .custom-scrollbar::-webkit-scrollbar:disabled {
@@ -39,33 +38,24 @@
 .custom-scrollbar::-webkit-scrollbar-track {
     background-clip: padding-box;
     background-color: var(--scrollbar-track-color);
-    border: solid var(--scrollbar-track-color);
-    border-width: 0 0 0 4px;
-    //border: none;
+    margin-block: 3px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track:horizontal {
-    border-width: 4px 0 0;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track:hover {
     background-color: var(--scrollbar-track-hover-color);
-    -webkit-box-shadow: inset 1px 0 0 rgba($black, .1);
+    -webkit-box-shadow: inset 1px 0 0 rgba($black, .075);
 }
 
 .custom-scrollbar::-webkit-scrollbar-track:horizontal:hover {
-    -webkit-box-shadow: inset 0 1px 0 rgba($black, .1);
+    -webkit-box-shadow: inset 0 1px 0 rgba($black, .075);
 }
 
 .custom-scrollbar::-webkit-scrollbar-track:active {
     background-color: var(--scrollbar-track-hover-color);
-    -webkit-box-shadow: inset 1px 0 0 rgba($black, .14), inset -1px 0 0 rgba($black,.07);
 }
-
-.custom-scrollbar::-webkit-scrollbar-track:horizontal:active {
-    -webkit-box-shadow: inset 0 1px 0 rgba($black, .14),inset 0 -1px 0 rgba($black, .07);
-}
-
 
 .custom-scrollbar::-webkit-scrollbar-track-piece {
 }
@@ -77,19 +67,15 @@
 .custom-scrollbar::-webkit-scrollbar-thumb {
     background-color: var(--scrollbar-thumb-color);
     background-clip: padding-box;
-    border: 1px solid transparent;
-    border-left-width: 6px;
-    min-height: 28px;
-    padding: 100px 0 0;
-    -webkit-box-shadow: inset 1px 1px 0 rgba($black, .1), inset 0 -1px 0 rgba($black, .07);
+    border-radius: 50em;
+    border: 4px solid transparent;
+    min-height: 36px;
 }
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
     background-color: var(--scrollbar-thumb-hover-color);
-    -webkit-box-shadow: inset 1px 1px 1px rgba($black, .25);
 }
 .custom-scrollbar::-webkit-scrollbar-thumb:active {
     background-color: var(--scrollbar-thumb-active-color);
-    -webkit-box-shadow: inset 1px 1px 1px rgba($black, .35);
 }
 
 .custom-scrollbar::-webkit-scrollbar-button,
@@ -123,9 +109,11 @@
     visibility: visible;
 }
 
-.custom-scrollbar.custom-scrollbar-overlay::-webkit-scrollbar-thumb {
+.custom-scrollbar.custom-scrollbar-overlay::-webkit-scrollbar-thumb,
+.custom-scrollbar.custom-scrollbar-overlay::-webkit-scrollbar-track {
     display: none;
 }
-.custom-scrollbar.custom-scrollbar-overlay:hover::-webkit-scrollbar-thumb {
+.custom-scrollbar.custom-scrollbar-overlay:hover::-webkit-scrollbar-thumb,
+.custom-scrollbar.custom-scrollbar-overlay:hover::-webkit-scrollbar-track {
     display: block;
 }
