Widget zone preview

--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -46,7 +46,7 @@
             @{ 
                 Assets.BodyAttributes.AppendCssClass("has-left-sidebar");
             }
-            <zone name="sidebar_left"></zone>
+            <zone name="sidebar_left" preview-disabled="true"></zone>
         </aside>
 
         <zone name="beforemaincontent"></zone>
