--- a/src/Smartstore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -18,17 +18,17 @@
     <partial name="_GoogleFonts" />
     <partial name="_FontAwesome" />
 
-    <zone name="stylesheets">
+    <zone name="stylesheets" preview-disabled="true">
         <link rel="stylesheet" href="~/bundle/css/site-common.css" />
     </zone>
 
-    <zone name="head_scripts">
+    <zone name="head_scripts" preview-disabled="true">
         <script src="~/bundle/js/jquery.js"></script>
     </zone>
 
-    <zone name="head_canonical"></zone>
-    <zone name="head_links"></zone>
-    <zone name="head"></zone>
+    <zone name="head_canonical" preview-disabled="true"></zone>
+    <zone name="head_links" preview-disabled="true"></zone>
+    <zone name="head" preview-disabled="true"></zone>
 
     <script src="~/js/smartstore.globalization.adapter.js"></script>
 
