--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/_ViewImports.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using System
 @using System.Globalization
 @using Humanizer
+@using Smartstore
 @using Smartstore.DevTools.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
