--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -42,7 +42,7 @@
             </div>
         </header>
 
-        <aside sm-suppress-if-empty-zone="sidebar_left" class="sidebar-left custom-scrollbar d-none d-md-block">
+        <aside sm-suppress-if-empty-zone="sidebar_left" sm-preview-disabled="true" class="sidebar-left custom-scrollbar d-none d-md-block">
             @{ 
                 Assets.BodyAttributes.AppendCssClass("has-left-sidebar");
             }
