--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
@@ -87,8 +87,8 @@ $border-color-translucent:    rgba($black, .125) !default;
 $border-radius:               .375rem !default;
 $border-radius-sm:            .25rem !default;
 $border-radius-lg:            .5rem !default;
-$border-radius-xl:            1rem !default;
-$border-radius-xxl:           2rem !default;
+$border-radius-xl:            .75rem !default;
+$border-radius-xxl:           1.5rem !default;
 $border-radius-pill:          50rem !default;
 $rounded-pill:                50rem !default;
 
