--- a/src/Smartstore.Web/wwwroot/shared/_custom-scrollbar.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_custom-scrollbar.scss
@@ -7,7 +7,7 @@
     --overflow-x: hidden;
     --overflow-y: auto;
     --scrollbar-size: 18px;
-    --scrollbar-track-color: rgba(0,0,0, 0.025);
+    --scrollbar-track-color: rgba(0,0,0, 0);
     --scrollbar-track-hover-color: rgba(0,0,0, 0.025);
     --scrollbar-thumb-color: rgba(0,0,0, 0.3);
     --scrollbar-thumb-hover-color: rgba(0,0,0, 0.5);
@@ -47,6 +47,7 @@
 .custom-scrollbar::-webkit-scrollbar-track:hover {
     background-color: var(--scrollbar-track-hover-color);
     -webkit-box-shadow: inset 1px 0 0 rgba($black, .075);
+    transition: all 0.5s ease;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track:horizontal:hover {
