Resolves #1139: Some more specific autocomplete hints

--- a/src/Smartstore.Web/Views/Identity/Register.cshtml
+++ b/src/Smartstore.Web/Views/Identity/Register.cshtml
@@ -39,14 +39,14 @@
                     <div class="form-group row">
                         <label asp-for="FirstName" class="col-md-3 col-form-label" attr-class='(Model.FirstNameRequired, "required")'></label>
                         <div class="col-md-9">
-                            <input asp-for="FirstName" sm-required="Model.FirstNameRequired" class="remember" />
+                            <input asp-for="FirstName" sm-required="Model.FirstNameRequired" class="remember" autocomplete="given-name" />
                             <span asp-validation-for="FirstName"></span>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label asp-for="LastName" class="col-md-3 col-form-label" attr-class='(Model.LastNameRequired, "required")'></label>
                         <div class="col-md-9">
-                            <input asp-for="LastName" sm-required="Model.LastNameRequired" class="remember" />
+                            <input asp-for="LastName" sm-required="Model.LastNameRequired" class="remember" autocomplete="family-name" />
                             <span asp-validation-for="LastName"></span>
                         </div>
                     </div>
@@ -58,6 +58,7 @@
                         <div class="col-md-9">
                             <input type="date" asp-for="DateOfBirth"
                                    class="native-validation"
+                                   autocomplete="bday"
                                    max="@DateTime.Now.ToString("yyyy-MM-dd")"
                                    min="@DateTime.Now.AddYears(-110).ToString("yyyy-MM-dd")" />
                         </div>
@@ -66,7 +67,7 @@
                     <div class="form-group row">
                         <label asp-for="Email" class="col-md-3 col-form-label required"></label>
                         <div class="col-md-9">
-                            <input asp-for="Email" sm-required="true" class="remember" />
+                            <input asp-for="Email" sm-required="true" class="remember" autocomplete="email" />
                             <span asp-validation-for="Email"></span>
                         </div>
                     </div>
@@ -77,13 +78,13 @@
                             @if (Model.CheckUsernameAvailabilityEnabled)
                             {
                                 <div class="input-group">
-                                    <input asp-for="Username" class="remember" />
+                                    <input asp-for="Username" class="remember" autocomplete="username" />
                                     <partial name="_CheckUsernameAvailability" />
                                 </div>
                             }
                             else
                             {
-                                <input asp-for="Username" class="remember" />
+                                <input asp-for="Username" class="remember" autocomplete="username" />
                             }
                             <span asp-validation-for="Username"></span>
                         </div>
@@ -98,14 +99,14 @@
                     <div class="form-group row">
                         <label asp-for="Password" class="col-md-3 col-form-label required"></label>
                         <div class="col-md-9">
-                            <input asp-for="Password" type="password" sm-required="true" />
+                            <input asp-for="Password" type="password" sm-required="true" autocomplete="new-password" />
                             <span asp-validation-for="Password"></span>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label asp-for="ConfirmPassword" class="col-md-3 col-form-label required"></label>
                         <div class="col-md-9">
-                            <input asp-for="ConfirmPassword" type="password" sm-required="true" />
+                            <input asp-for="ConfirmPassword" type="password" sm-required="true" autocomplete="new-password" />
                             <span asp-validation-for="ConfirmPassword"></span>
                         </div>
                     </div>
@@ -123,7 +124,7 @@
                     <div sm-if="Model.CompanyEnabled" class="form-group row">
                         <label asp-for="Company" class="col-md-3 col-form-label" attr-class='(Model.CompanyRequired, "required")'></label>
                         <div class="col-md-9">
-                            <input asp-for="Company" sm-required="Model.CompanyRequired" class="remember" />
+                            <input asp-for="Company" sm-required="Model.CompanyRequired" class="remember" autocomplete="organization" />
                             <span asp-validation-for="Company"></span>
                         </div>
                     </div>
@@ -148,28 +149,28 @@
                     <div sm-if="Model.StreetAddressEnabled" class="form-group row">
                         <label asp-for="StreetAddress" class="col-md-3 col-form-label" attr-class='(Model.StreetAddressRequired, "required")'></label>
                         <div class="col-md-9">
-                            <input asp-for="StreetAddress" sm-required="Model.StreetAddressRequired" class="remember" />
+                            <input asp-for="StreetAddress" sm-required="Model.StreetAddressRequired" class="remember" autocomplete="address-line1" />
                             <span asp-validation-for="StreetAddress"></span>
                         </div>
                     </div>
                     <div sm-if="Model.StreetAddress2Enabled" class="form-group row">
                         <label asp-for="StreetAddress2" class="col-md-3 col-form-label" attr-class='(Model.StreetAddress2Required, "required")'></label>
                         <div class="col-md-9">
-                            <input asp-for="StreetAddress2" sm-required="Model.StreetAddress2Required" class="remember" />
+                            <input asp-for="StreetAddress2" sm-required="Model.StreetAddress2Required" class="remember" autocomplete="address-line2" />
                             <span asp-validation-for="StreetAddress2"></span>
                         </div>
                     </div>
                     <div sm-if="Model.ZipPostalCodeEnabled" class="form-group row">
                         <label asp-for="ZipPostalCode" class="col-md-3 col-form-label" attr-class='(Model.ZipPostalCodeRequired, "required")'></label>
                         <div class="col-md-9">
-                            <input asp-for="ZipPostalCode" sm-required="Model.ZipPostalCodeRequired" class="remember" />
+                            <input asp-for="ZipPostalCode" sm-required="Model.ZipPostalCodeRequired" class="remember" autocomplete="postal-code" />
                             <span asp-validation-for="ZipPostalCode"></span>
                         </div>
                     </div>
                     <div sm-if="Model.CityEnabled" class="form-group row">
                         <label asp-for="City" class="col-md-3 col-form-label" attr-class='(Model.CityRequired, "required")'></label>
                         <div class="col-md-9">
-                            <input asp-for="City" sm-required="Model.CityRequired" class="remember" />
+                            <input asp-for="City" sm-required="Model.CityRequired" class="remember" autocomplete="address-level2" />
                             <span asp-validation-for="City"></span>
                         </div>
                     </div>
@@ -209,7 +210,7 @@
                     <div sm-if="Model.PhoneEnabled" class="form-group row">
                         <label asp-for="Phone" class="col-md-3 col-form-label" attr-class='(Model.PhoneRequired, "required")'></label>
                         <div class="col-md-9">
-                            <input asp-for="Phone" sm-required="Model.PhoneRequired" class="remember" />
+                            <input asp-for="Phone" sm-required="Model.PhoneRequired" class="remember" autocomplete="tel" />
                             <span asp-validation-for="Phone"></span>
                         </div>
                     </div>
