CookieManager: fixed InvalidOperationException in TopicWidget

--- a/src/Smartstore.Web/Views/Shared/Components/TopicWidget/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/TopicWidget/Default.cshtml
@@ -4,7 +4,7 @@
 
 @if (!Model.WrapContent)
 {
-    @if (Model.Consented)
+    @if (Model.Consented || Model.CookieType == null)
     {
         @Html.Raw(Model.Body)
     }
