--- a/src/Smartstore.Modules/Smartstore.AmazonPay/Views/Shared/Components/PayButton/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.AmazonPay/Views/Shared/Components/PayButton/Default.cshtml
@@ -4,7 +4,7 @@
     <div id="amazonpay-button"></div>
 </div>
 
-<script sm-consent-type="Required" data-origin="amazonpay-button">
+<script data-origin="amazonpay-button">
     loadAmazonPayScript(function () {
         var amazonPayButton = amazon.Pay.renderButton('#amazonpay-button', {
             merchantId: '@Html.Raw(Model.SellerId)',
